force-app/main/default/objects/ServiceOps_Risk_Rule__mdt/ServiceOps_Risk_Rule__mdt.object-meta.xml
<CustomObject>
    <description>Defines risk thresholds for different signal types.</description>
    <label>ServiceOps Risk Rule</label>
    <pluralLabel>ServiceOps Risk Rules</pluralLabel>
</CustomObject>