force-app/main/default/objects/ServiceOps_Risk_Rule__mdt/fields/Max_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Max_Minutes__c</fullName>
    <label>Max Minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>