force-app/main/default/objects/ServiceOps_Risk_Rule__mdt/fields/Signal_Type__c.field-meta.xml
<CustomField>
    <fullName>Signal_Type__c</fullName>
    <label>Signal Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reply Risk</fullName>
                <default>true</default>
                <label>Reply Risk</label>
            </value>
            <value>
                <fullName>Queue Risk</fullName>
            </value>
            <value>
                <fullName>SLA Risk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>