force-app/main/default/objects/ServiceOps_Risk_Rule__mdt/fields/Suggested_Action_Template__c.field-meta.xml
<CustomField>
    <fullName>Suggested_Action_Template__c</fullName>
    <label>Suggested Action Template</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>